--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,10 +35,6 @@ dev = [
     "pydantic[mypy]>=2.11.5",
 ]
 
-[tool.pydantic-mypy]
-init_forbid_extra = false
-init_typed = true
-
 [tool.mypy]
 python_version = 3.13
 ignore_missing_imports = true
@@ -46,6 +42,14 @@ strict = true
 files = ["src", "tests"]
 allow_redefinition = false
 plugins = ["pydantic.mypy"]
+
+[tool.pydantic-mypy]
+init_forbid_extra = false
+init_typed = true
+
+[tool.ruff]
+line-length = 99
+fix = true
 
 [tool.black]
 line-length = 99
@@ -58,8 +62,8 @@ known_first_party = ["auth_service"]
 sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
 multi_line_output = 3
 
-[tool.ruff]
-line-length = 99
+[lint.ignore]
 ignore = ["E203", "W503"]
+
+[lint.select]
 select = ["E", "F", "W", "C90", "I"]
-fix = true
