--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+docker-compose.local.yaml
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -186,3 +187,4 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+/docker-compose.local.yaml
