--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,20 +51,20 @@ init_typed = true
 [tool.ruff]
 line-length = 99
 fix = true
+select = ["E", "F", "W", "C90", "I"]
+ignore = ["E203", "W503"]
 
 [tool.black]
 line-length = 99
 target-version = ["py313"]
+skip-string-normalization = false
 
 [tool.isort]
 profile = "black"
 line_length = 99
 known_first_party = ["auth_service"]
 sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
+include_trailing_comma = true
+use_parentheses = true
 multi_line_output = 3
 
-[lint.ignore]
-ignore = ["E203", "W503"]
-
-[lint.select]
-select = ["E", "F", "W", "C90", "I"]
