--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,8 +51,11 @@ init_typed = true
 [tool.ruff]
 line-length = 99
 fix = true
+
+[tool.ruff.lint]
 select = ["E", "F", "W", "C90", "I"]
-ignore = ["E203", "W503"]
+ignore = ["E203",]
+
 
 [tool.black]
 line-length = 99
