chore: Update isort config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ skip-string-normalization = false
 profile = "black"
 line_length = 99
 known_first_party = ["auth_service"]
-sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
+sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
 include_trailing_comma = true
 use_parentheses = true
 multi_line_output = 3
