--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,33 @@
 services:
+  postgres_db_test:
+    image: postgres:16-alpine
+    container_name: auth_database_test
+    profiles:
+      - test
+    env_file:
+      - .env.test
+    environment:
+      POSTGRES_USER: ${DATABASE_USERNAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${DATABASE_NAME}
+    volumes:
+      - postgres_data_test:/var/lib/postgresql/data
+    ports:
+      - "${DATABASE_PORT}:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${DATABASE_USERNAME} -d ${DATABASE_NAME}" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
   postgres_db:
     image: postgres:16-alpine
     container_name: auth_database
     networks:
       - auth_network
+    profiles:
+      - default
     environment:
       POSTGRES_USER: ${DATABASE_USERNAME}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
@@ -26,6 +50,8 @@ services:
     container_name: migrations
     networks:
       - auth_network
+    profiles:
+      - default
     environment:
       DATABASE_USERNAME: ${DATABASE_USERNAME}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
@@ -44,6 +70,8 @@ services:
     container_name: auth_service
     networks:
       - auth_network
+    profiles:
+      - default
     environment:
       SERVER_HOST: "0.0.0.0"
       SERVER_PORT: 8000
@@ -66,6 +94,7 @@ services:
 
 volumes:
   postgres_data:
+  postgres_data_test:
 
 networks:
   auth_network:
