--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,25 +50,35 @@ init_forbid_extra = false
 init_typed = true
 
 [tool.ruff]
-line-length = 99
+line-length = 120
 fix = true
 
 [tool.ruff.lint]
 select = ["E", "F", "W", "C90", "I"]
 ignore = ["E203",]
 
+[tool.ruff.format]
+quote-style = "double"
+docstring-code-format = true
+docstring-code-line-length = 80
+
+[tool.ruff.lint.isort]
+section-order = ["future", "standard-library", "third-party", "first-party", "local-folder", ]
+
+[tool.pydocstyle]
+convention = "pep257"
+match-dir = "src"
+add-ignore = [
+  "D104",  # Missing docstring in public package
+  "D105",  # Missing docstring in magic method
+  "D107",  # Missing docstring in __init__
+  "D203",  # 1 blank line required before class docstring
+  "D213",  # Multi-line docstring summary should start at end of first line
+]
 
 [tool.black]
-line-length = 99
+line-length = 120
 target-version = ["py313"]
 skip-string-normalization = false
 
-[tool.isort]
-profile = "black"
-line_length = 99
-known_first_party = ["auth_service"]
-sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
-include_trailing_comma = true
-use_parentheses = true
-multi_line_output = 3
 
