--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,3 +81,7 @@ target-version = ["py313"]
 skip-string-normalization = false
 
 
+[tool.pytest.ini_options]
+addopts = ["-p", "pytest_asyncio"]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
