feat(email): add email sending infrastructure with console and SMTP backends
- Introduce EmailMessage DTO with support for Jinja2 templates
- Define EmailSender abstract base class interface
- Implement ConsoleEmailSender to output emails to console
- Add SMTPEmailSender stub for future SMTP support
- Extend config with EmailSettings supporting console and SMTP backends
- Add .env.example entries for email configuration
- Add jinja2 dependency for templating engine

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,16 @@ DATABASE_HOST=""
 DATABASE_PORT=
 DATABASE_USERNAME=""
 DATABASE_PASSWORD=""
+
+
+# Configuration for connsole email sender.
+#EMAIL__CONFIG__BACKEND="console"
+
+# Configuration for smtp email sender.
+#EMAIL__CONFIG__BACKEND="smtp"
+#EMAIL__CONFIG__HOST="domain.com"
+#EMAIL__CONFIG__PORT=587
+#EMAIL__CONFIG__USERNAME="username"
+#EMAIL__CONFIG__PASSWORD="password"
+#EMAIL__CONFIG__USE_TLS=true
+#EMAIL__CONFIG__USE_SSL=false
