fix(config): use valid delimiter

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-DATABASE_NAME=""
-DATABASE_HOST=""
-DATABASE_PORT=
-DATABASE_USERNAME=""
-DATABASE_PASSWORD=""
+DATABASE__NAME=""
+DATABASE__HOST=""
+DATABASE__PORT=
+DATABASE__USERNAME=""
+DATABASE__PASSWORD=""
 
 
 # Configuration for connsole email sender.
