--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "dishka>=1.6.0",
     "adaptix[pydantic,sqlalchemy]>=3.0.0b11",
     "black[dev]>=25.1.0",
+    "jinja2>=3.1.6",
 ]
 
 [project.optional-dependencies]
